# FlashMLX

./: .gitignore  ACTIVE_FEATURES.md  ACTUAL_PERFORMANCE.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  CONFIG_AUDIT_REPORT.md  CONTEXT_LENGTH_BENCHMARK_REPORT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  LICENSE  MAC_ATTENTION_EXPERIMENTAL.md  META_HARNESS_GUIDE.md  META_HARNESS_REPORT.md  MLX_VLM_VS_MLX_LM.md  MODEL_PATHS.md  PHASE0_BASELINE_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_REVISED_PLAN.md  PHASE2_MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  README_MAC.md  RELEASE_NOTES_v2.md  SOURCE_CODE_STRUCTURE.md  SSM_CACHE_IMPROVEMENT_SUMMARY.md  SSM_CACHE_PP_TG_ANALYSIS.md  TURBOANGLE_BENCHMARK_RESULTS.md  TURBOANGLE_INTEGRATION.md  TURBOQUANT_TRANSPLANT_REPORT.md  VLM_CODE_SIZE_ANALYSIS.md  VLM_INTERFACE_ANALYSIS.md  VLM_MIGRATION_PLAN.md  VLM_MIGRATION_TEST_PLAN.md  VLM_VS_TEXT_COMPARISON.md  am_calibration_qwen3-8b_2.0x_onpolicy.pkl  analyze_compression_ratio.py  analyze_mac_trace.md  attention-matching-root-cause-final.md  bench_32k_context_comparison.py  bench_ab_final.py  (+99 more)
.solar/: AM-ALGORITHM-FIXES.md  AM-FIX-RESULTS.md  AM-MIGRATION-STATE.md  ANALYSIS-SUMMARY.txt  ARTICLE-week-in-review.md  BASELINE-BENCHMARK-v0.8.2.md  BASELINE_PERFORMANCE_REPORT.md  BUILD_TEST_REPORT.md  CHUNKED-PREFILL-BENCHMARK-v0.9.0.md  DECISION-POINT-AM-COMPRESSION.md  KVTC_P0_PROGRESS.md  KVTC_P1_STATUS.md  KVTC_PERFORMANCE_ANALYSIS.md  MLX_KERNEL_ANALYSIS.md  MODEL_CONFIG.md  NEXT-PHASE-ROADMAP.md  PROFILER_FIRST_LAW.md  PROFILER_PHASE1_COMPLETE.md  PROFILING_TOOL_PLAN.md  PROGRESS_UPDATE_2026-03-20.md  RESEARCH-REPORT-REAL-KV-TESTING.md  ROUTE5-SCORED-KV-DIRECT-BENCHMARK-v1.0.md  SCORED-P2-BENCHMARK-v0.8.1.md  SELF_OPTIMIZING_PROFILER.md  STATE.md  TASK-11-HYBRID-ARCHITECTURE-RESEARCH.md  adaptive-compressor-report.md  adaptive-recent-window-implementation.md  adaptive-router-v2-test-report.md  adaptive-routing-test-report.md  agent-workload-validation.md  am-aggressive-test-report.md  am-beta-investigation.md  am-breakthrough-summary.md  am-comprehensive-design-analysis.md  am-compression-failure-report.md  am-compression-final-analysis.md  am-failure-root-cause-analysis.md  am-implementation-status.md  am-offline-calibration-design.md  (+137 more)
benchmarks/: PERFORMANCE_REPORT.md  accurate_benchmark.py  accurate_benchmark_results.json  analyze_profiling_results.py  baseline_benchmark.py  baseline_benchmark_simple.py  baseline_results.json  bench_3pir.py  bench_ab_final.py  bench_batch4_16k.py  bench_cache_bridge.py  bench_card.py  bench_combo.py  bench_compact_tg.py  bench_decode_pool.py  bench_density_modes.py  bench_diagnostic.py  bench_forced_pressure.py  bench_ftec.py  bench_fused_moe.py  bench_h0_persistence.py  bench_hot_swap.py  bench_hybrid.py  bench_memory_pressure.py  bench_minimal_batch_only.py  bench_minimal_tg.py  bench_miss_policy.py  bench_modes_throughput.py  bench_n_crossover.py  bench_oracle.py  bench_pool_quality.py  bench_pool_quick.py  bench_prefetch.py  bench_quality.py  bench_quick_sanity.py  (+108 more)
(+578 files in other folders)
